nav-alignment-fix:

--- a/src/components/MainNavBar/MainNavBar.scss
+++ b/src/components/MainNavBar/MainNavBar.scss
@@ -90,10 +90,9 @@ html {
           display: flex;
           flex-direction: row;
           align-items: center;
-          padding: 0 10px;
+          padding-right: 10px;
           border-color: #ddd;
-          border-width: 0 1px 0 1px;
-          margin-right: 36px;
+          border-right-width: 1px;
 
           @media screen and (max-width: 1023px) {
             margin: 0;
@@ -168,4 +167,8 @@ html {
       }
     }
   }
+}
+
+#main-nav-bar-tab-user-avatar {
+  margin-left: 20px;
 }
